--- a/MG.ipynb
+++ b/MG.ipynb
@@ -74,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "def takeFileName(filedir): # remove just file name from directory and return\n",
+    "def take_file_name(filedir): # remove just file name from directory and return\n",
     "    # filename = np.array(filedir.split('/'))[-1].split('.')[0] # take out the name, isolate the jpeg, then return the name\n",
     "    filename = np.array(filedir.split('/'))[-1] # take out the name, then return the name\n",
     "    # print(filename)\n",
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "def matchFileNames(watermarkedarr, nonwatermarkedarr, dname_wm, dname_nwm):\n",
+    "def match_file_names(watermarkedarr, nonwatermarkedarr, dname_wm, dname_nwm):\n",
     "    sortedwmarr = np.array([])\n",
     "    sortednwmarr = np.array([])\n",
     "    \n",
@@ -133,38 +133,64 @@
    "source": [
     "# Sort the watermarked and non watermarked images into parallel arrays so NN will use it better\n",
     "\n",
-    "train_path_watermarked_images = 'wm-nowm/train/watermark/'\n",
-    "train_path_nonwatermarked_images = 'wm-nowm/train/no-watermark/'\n",
+    "train_path_watermarked_images = \"wm-nowm/train/watermark/\"\n",
+    "train_path_nonwatermarked_images = \"wm-nowm/train/no-watermark/\"\n",
     "\n",
-    "tp_watermarked = np.array([]) # array with watermarked image names\n",
-    "tp_nonwatermarked = np.array([]) # array with nonwatermarked image names\n",
+    "tp_watermarked = np.array([])  # array with watermarked image names\n",
+    "tp_nonwatermarked = np.array([])  # array with nonwatermarked image names\n",
     "\n",
-    "for root, dirs, files in os.walk(train_path_watermarked_images, topdown=True): # data length = 12510\n",
+    "for root, dirs, files in os.walk(\n",
+    "    train_path_watermarked_images, topdown=True\n",
+    "):  # data length = 12510\n",
     "    for file in files:\n",
-    "        tp_watermarked = np.append(tp_watermarked, takeFileName(file)) # append just the name of the file into array\n",
-    "    \n",
-    "for root, dirs, files in os.walk(train_path_nonwatermarked_images, topdown=True): # data length = 12477\n",
+    "        tp_watermarked = np.append(\n",
+    "            tp_watermarked, take_file_name(file)\n",
+    "        )  # append just the name of the file into array\n",
+    "\n",
+    "for root, dirs, files in os.walk(\n",
+    "    train_path_nonwatermarked_images, topdown=True\n",
+    "):  # data length = 12477\n",
     "    for file in files:\n",
-    "        tp_nonwatermarked = np.append(tp_nonwatermarked, takeFileName(file)) # append just the name of the file into array\n",
-    "        \n",
-    "tp_watermarked_sorted, tp_nonwatermarked_sorted = matchFileNames(tp_watermarked, tp_nonwatermarked, train_path_watermarked_images, train_path_nonwatermarked_images)\n",
+    "        tp_nonwatermarked = np.append(\n",
+    "            tp_nonwatermarked, take_file_name(file)\n",
+    "        )  # append just the name of the file into array\n",
+    "\n",
+    "tp_watermarked_sorted, tp_nonwatermarked_sorted = match_file_names(\n",
+    "    tp_watermarked,\n",
+    "    tp_nonwatermarked,\n",
+    "    train_path_watermarked_images,\n",
+    "    train_path_nonwatermarked_images,\n",
+    ")\n",
     "\n",
     "\n",
-    "valid_path_watermarked_images = 'wm-nowm/valid/watermark/'\n",
-    "valid_path_nonwatermarked_images = 'wm-nowm/valid/no-watermark/'\n",
+    "valid_path_watermarked_images = \"wm-nowm/valid/watermark/\"\n",
+    "valid_path_nonwatermarked_images = \"wm-nowm/valid/no-watermark/\"\n",
     "\n",
-    "vp_watermarked = np.array([]) # array with watermarked image names\n",
-    "vp_nonwatermarked = np.array([]) # array with nonwatermarked image names\n",
+    "vp_watermarked = np.array([])  # array with watermarked image names\n",
+    "vp_nonwatermarked = np.array([])  # array with nonwatermarked image names\n",
     "\n",
-    "for root, dirs, files in os.walk(valid_path_watermarked_images, topdown=True): # data length = 3299\n",
+    "for root, dirs, files in os.walk(\n",
+    "    valid_path_watermarked_images, topdown=True\n",
+    "):  # data length = 3299\n",
     "    for file in files:\n",
-    "        vp_watermarked = np.append(vp_watermarked, takeFileName(file)) # append just the name of the file into array\n",
-    "    \n",
-    "for root, dirs, files in os.walk(valid_path_nonwatermarked_images, topdown=True): # data length = 3289\n",
+    "        vp_watermarked = np.append(\n",
+    "            vp_watermarked, take_file_name(file)\n",
+    "        )  # append just the name of the file into array\n",
+    "\n",
+    "for root, dirs, files in os.walk(\n",
+    "    valid_path_nonwatermarked_images, topdown=True\n",
+    "):  # data length = 3289\n",
     "    for file in files:\n",
-    "        vp_nonwatermarked = np.append(vp_nonwatermarked, takeFileName(file)) # append just the name of the file into array\n",
-    "        \n",
-    "vp_watermarked_sorted, vp_nonwatermarked_sorted = matchFileNames(vp_watermarked, vp_nonwatermarked, valid_path_watermarked_images, valid_path_nonwatermarked_images)"
+    "        vp_nonwatermarked = np.append(\n",
+    "            vp_nonwatermarked, take_file_name(file)\n",
+    "        )  # append just the name of the file into array\n",
+    "\n",
+    "vp_watermarked_sorted, vp_nonwatermarked_sorted = match_file_names(\n",
+    "    vp_watermarked,\n",
+    "    vp_nonwatermarked,\n",
+    "    valid_path_watermarked_images,\n",
+    "    valid_path_nonwatermarked_images,\n",
+    ")"
    ]
   },
   {
@@ -185,7 +211,7 @@
     "height = 128\n",
     "dim = (width, height) # set the dimensions\n",
     "\n",
-    "def createPixelArr(files):\n",
+    "def create_pixel_arr(files):\n",
     "    data = []\n",
     "    for image in files:\n",
     "        try: # take each image and use imread to get the pixel values in a matrix \n",
@@ -196,11 +222,11 @@
     "            print(e) # some error thrown in imread or resize\n",
     "    return np.array(data)\n",
     "\n",
-    "train_wms_pixVals = createPixelArr(tp_watermarked_sorted)\n",
-    "train_nwms_pixVals = createPixelArr(tp_nonwatermarked_sorted)\n",
+    "train_wms_pixVals = create_pixel_arr(tp_watermarked_sorted)\n",
+    "train_nwms_pixVals = create_pixel_arr(tp_nonwatermarked_sorted)\n",
     "\n",
-    "val_wms_pixVals = createPixelArr(vp_watermarked_sorted)\n",
-    "val_nwms_pixVals = createPixelArr(vp_nonwatermarked_sorted) # make ndarrays"
+    "val_wms_pixVals = create_pixel_arr(vp_watermarked_sorted)\n",
+    "val_nwms_pixVals = create_pixel_arr(vp_nonwatermarked_sorted) # make ndarrays"
    ]
   },
   {
@@ -280,19 +306,19 @@
     "# Functions to data augment images \n",
     "\n",
     "def data_augmentation(inputImage): # run image through all augmentation methods\n",
-    "    return randomContrast(randomBrightness(inputImage)).numpy()\n",
+    "    return random_contrast(random_brightness(inputImage)).numpy()\n",
     "    # return randomCrop(randomFlip(inputImage)) # use augmentation methods without messing with colour \n",
     "\n",
-    "def randomFlip(pic): # flips the image up and down before left and right at random\n",
+    "def random_flip(pic): # flips the image up and down before left and right at random\n",
     "    return tf.image.random_flip_up_down(tf.image.random_flip_left_right(pic, 1), 1)\n",
     "\n",
     "# def randomCrop(pic): # crops the image from a randomly defined width and height, that are under the intial image width and height\n",
     "#     return tf.image.random_crop(pic, size=[random.randint(75,width), random.randint(75,height), 3], seed=None)\n",
     "\n",
-    "def randomBrightness(pic): # makes the image a random brightness from 1% to 20%\n",
+    "def random_brightness(pic): # makes the image a random brightness from 1% to 20%\n",
     "    return tf.image.random_brightness(pic, random.uniform(0.01, 0.2), 1)\n",
     "\n",
-    "def randomContrast(pic): # contrasts the image from 5% to 50%\n",
+    "def random_contrast(pic): # contrasts the image from 5% to 50%\n",
     "    return tf.image.random_contrast(pic, 0.2, 0.7, 1)"
    ]
   },
@@ -334,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "#apply data augmentation to the X_train and y_train\n",
+    "# apply data augmentation to the X_train and y_train\n",
     "\n",
     "data_augmented_X = [] \n",
     "data_augmented_y = []\n",
